fix after review
Signed-off-by: Hugo KULESZA <hugo.kulesza@rte-france.com>